--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,6 +48,12 @@ dependencies {
     implementation 'com.github.delight-im:Android-SimpleLocation:v1.1.0'
 
     //fragment
-    implementation "androidx.fragment:fragment:1.3.2"
+    implementation "androidx.fragment:fragment:1.3.3"
+
+    //retrofit
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+
+    //Gson
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
 
 }
